Updated the project to Spring Boot 3.1.5